--- a/views/index.pug
+++ b/views/index.pug
@@ -16,5 +16,6 @@ block main-content
       input(type="text" placeholder="Pick A Movie!" id="input-2" class="input")
         //- input(type="submit" value="Search")
     #search-container
+  h2#message-container
   #result-container
   
